[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/ui/unit_skill_list.gd" type="Script" id=1]

[sub_resource type="InputEventKey" id=3]
scancode = 49

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=1]
scancode = 50

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=5]
scancode = 51

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 52

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 53

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=11]
scancode = 54

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=13]
resource_name = "Escape key"
scancode = 16777217

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[node name="UnitSkillList" type="CanvasLayer" groups=["gui", "unit_gui"]]
script = ExtResource( 1 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 0.156
anchor_bottom = 0.747
margin_left = -160.0
margin_right = -159.744
margin_bottom = -0.200012
color = Color( 0.862745, 0.552941, 0.152941, 0.501961 )
__meta__ = {
"_edit_group_": true
}

[node name="ButtonGrid" type="GridContainer" parent="Backdrop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -5.0
margin_bottom = -8.0
__meta__ = {
"_edit_group_": true
}

[node name="Skill_1" type="Button" parent="Backdrop/ButtonGrid"]
margin_right = 147.0
margin_bottom = 50.0
focus_neighbour_right = NodePath("../Skill_2")
focus_next = NodePath("../Skill_2")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 4 )
text = "Skill 1"
__meta__ = {
"_editor_description_": "Scancode 77 = M"
}

[node name="Skill_2" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 54.0
margin_right = 147.0
margin_bottom = 104.0
focus_neighbour_left = NodePath("../Skill_1")
focus_neighbour_right = NodePath("../Skill_3")
focus_next = NodePath("../Skill_3")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 2 )
text = "Skill 2"
__meta__ = {
"_editor_description_": "Scancode 65 = A"
}

[node name="Skill_3" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 108.0
margin_right = 147.0
margin_bottom = 158.0
focus_neighbour_left = NodePath("../Skill_2")
focus_neighbour_right = NodePath("../Skill_4")
focus_next = NodePath("../Skill_4")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 6 )
text = "Skill 3"
__meta__ = {
"_editor_description_": "Scancode 83 = S"
}

[node name="Skill_4" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 162.0
margin_right = 147.0
margin_bottom = 212.0
focus_neighbour_left = NodePath("../Skill_3")
focus_neighbour_right = NodePath("../Skill_5")
focus_next = NodePath("../Skill_5")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 8 )
text = "Skill 4"
__meta__ = {
"_editor_description_": "Scancode 73 = I"
}

[node name="Skill_5" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 216.0
margin_right = 147.0
margin_bottom = 266.0
focus_neighbour_left = NodePath("../Skill_4")
focus_neighbour_right = NodePath("../Skill_6")
focus_next = NodePath("../Skill_6")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 10 )
text = "Skill 5"
__meta__ = {
"_editor_description_": "Scancode 82 = R"
}

[node name="Skill_6" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 270.0
margin_right = 147.0
margin_bottom = 320.0
focus_neighbour_left = NodePath("../Skill_5")
focus_neighbour_right = NodePath("../Skill_7")
focus_next = NodePath("../Skill_7")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 12 )
text = "Skill 6"

[node name="Skill_7" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 324.0
margin_right = 147.0
margin_bottom = 374.0
focus_neighbour_left = NodePath("../Skill_6")
focus_next = NodePath("../Skill_1")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 14 )
text = "Skill 7"

[node name="Cancel" type="Button" parent="Backdrop/ButtonGrid"]
margin_top = 378.0
margin_right = 147.0
margin_bottom = 428.0
focus_neighbour_left = NodePath("../Skill_6")
focus_next = NodePath("../Skill_1")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 14 )
text = "Cancel"

[node name="Tween" type="Tween" parent="."]

[node name="Show" type="Button" parent="."]
visible = false
margin_left = 96.0
margin_top = 104.0
margin_right = 192.0
margin_bottom = 160.0
text = "Show"

[node name="Hide" type="Button" parent="."]
visible = false
margin_left = 208.0
margin_top = 104.0
margin_right = 304.0
margin_bottom = 160.0
text = "Hide"

[connection signal="pressed" from="Show" to="." method="show_gui"]
[connection signal="pressed" from="Hide" to="." method="hide_gui"]
